[package]
name = "rg_exts"
version = "0.1.0"
authors = ["zuowenjian <zuowenjian@outlook.com>"]


[dependencies]
log               = "0.4.1"
pretty_env_logger = "0.2"
rg_core           = { path  = "../core", version = "*" }
rg_lib            = { path  = "../lib", version  = "*" }
shells            = "0.2"



