[package]
name = "rg_lib"
version = "0.1.0"
authors = ["zuowenjian <zuowenjian@outlook.com>"]

[dependencies]
log               = "0.4.1"
serde             = "1.0"
serde_derive      = "1.0"
serde_json        = "1.0"
lazy_static       = "1.0"
futures           = "0.1"
pretty_env_logger = "0.2"
toml              = "0.4"
yaml-rust         = "0.4.0"
regex             = "0.2"
shells            = "0.2"
