[package]
name    = "rgger-nx"
version = "0.1.0"
authors = ["zuowenjian <zuowenjian@outlook.com>"]

[dependencies]
log               = "0.4.1"
pretty_env_logger = "0.2"
toml              = "0.4"
rg_core           = { path  = "../core", version    = "*" }
rg_exts           = { path  = "../extends", version = "*" }



